<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tjenester"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4D0D0"
    tools:context=".VoresTjenester">

    <Button
        android:id="@+id/gaa_tilbage_knap"
        android:layout_width="165dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="gaaTilbage"
        android:text="@string/go_back_btn_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/beregn_maaneds_loen_btn"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="78dp"
        android:layout_marginEnd="128dp"
        android:background="#FFC107"
        android:gravity="center"
        android:onClick="gaaTilBeregnMaanedsLoen"
        android:text="@string/maanedsLoen_udbetaling_btn"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gaa_tilbage_knap" />

    <TextView
        android:id="@+id/beregn_koersels_fradrag_btn"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="128dp"
        android:background="#4CAF50"
        android:gravity="center"
        android:text="@string/koerselsFradrag_btn"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/beregn_maaneds_loen_btn" />

    <TextView
        android:id="@+id/beregn_feriepenge_btn"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="128dp"
        android:background="#F44336"
        android:gravity="center"
        android:text="@string/feriepenge_btn"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/beregn_koersels_fradrag_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>