<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gaa_til_tjenester_btn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4D0D0"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/box1"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="31dp"
        android:background="#FFC107"
        android:gravity="center"
        android:text="1"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/box3"
        app:layout_constraintEnd_toStartOf="@+id/box2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/box1_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/box1_text"
        app:layout_constraintBottom_toTopOf="@id/box1"
        app:layout_constraintEnd_toEndOf="@id/box1"
        app:layout_constraintStart_toStartOf="@id/box1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/box2"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="31dp"
        android:background="#3F51B5"
        android:gravity="center"
        android:text="2"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/box4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/box1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/box2_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/box2_text"
        app:layout_constraintBottom_toTopOf="@id/box2"
        app:layout_constraintEnd_toEndOf="@id/box2"
        app:layout_constraintStart_toStartOf="@id/box2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/box3"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="40dp"
        android:background="#4CAF50"
        android:gravity="center"
        android:text="3"
        android:textColor="#000000"
        app:layout_constraintEnd_toStartOf="@+id/box4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/box1" />

    <TextView
        android:id="@+id/box3_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/box3_text"
        app:layout_constraintBottom_toTopOf="@id/box3"
        app:layout_constraintEnd_toEndOf="@id/box3"
        app:layout_constraintStart_toStartOf="@id/box3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.947" />


    <TextView
        android:id="@+id/box4"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="37dp"
        android:background="#F44336"
        android:gravity="center"
        android:text="4"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/box3"
        app:layout_constraintTop_toBottomOf="@+id/box2" />

    <TextView
        android:id="@+id/box4_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/box4_text"
        app:layout_constraintBottom_toTopOf="@id/box4"
        app:layout_constraintEnd_toEndOf="@id/box4"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="@id/box4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.947" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.41" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="182dp"
        android:layout_height="64dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="36dp"
        android:onClick="gaaTilVoresTjenester"
        android:text="@string/start_btn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/app_title"
        android:layout_width="242dp"
        android:layout_height="60dp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="84dp"
        android:autoSizeTextType="uniform"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/box3" />

    <TextView
        android:id="@+id/app_description"
        android:layout_width="398dp"
        android:layout_height="192dp"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="6dp"
        android:padding="16dp"
        android:text="@string/app_description"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_title" />

    <TextView
        android:id="@+id/opret_bruger_link"
        android:layout_width="125dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="26dp"
        android:autoLink="web"
        android:onClick="gaaTilOpretBruger"
        android:text="@string/web_link"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
